unpackaged/main/default/objects/adroll__AdRollCriteria__c/adroll__AdRollCriteria__c.object-meta.xml
<CustomObject>
    <description>A Record for each Criteria record in the Where Clause for the Query</description>
    <label>RollWorks Criteria</label>
    <nameField>
        <displayFormat>ARC-{0000000}</displayFormat>
        <label>RollWorks Criteria Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>RollWorks Criteria</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>