unpackaged/main/default/objects/adroll__AdRollCriteria__c/fields/adroll__AdRollAttributeSyncQuery__c.field-meta.xml
<CustomField>
    <fullName>adroll__AdRollAttributeSyncQuery__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Attribute Sync Query for the Criteria</description>
    <inlineHelpText>Attribute Sync Query for the Criteria</inlineHelpText>
    <label>RollWorks Attribute Sync Query</label>
    <referenceTo>adroll__AdRollAttributeSyncQuery__c</referenceTo>
    <relationshipLabel>RollWorks Criteria</relationshipLabel>
    <relationshipName>AdRollCriteria</relationshipName>
    <type>Lookup</type>
</CustomField>