unpackaged/main/default/objects/adroll__AdRollCriteria__c/fields/adroll__AdRollSegmentObject__c.field-meta.xml
<CustomField>
    <fullName>adroll__AdRollSegmentObject__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>RollWorks Segment Object used to apply the criteria</description>
    <inlineHelpText>RollWorks Segment Object used to apply the criteria</inlineHelpText>
    <label>RollWorks Segment Object</label>
    <referenceTo>adroll__AdRollSegmentObject__c</referenceTo>
    <relationshipLabel>RollWorks Criteria</relationshipLabel>
    <relationshipName>AdRollCriteria</relationshipName>
    <type>Lookup</type>
</CustomField>