unpackaged/main/default/objects/adroll__AdRollCriteria__c/fields/adroll__DisplayOrder__c.field-meta.xml
<CustomField>
    <fullName>adroll__DisplayOrder__c</fullName>
    <description>This is the number used to sort this record with sibling records.</description>
    <inlineHelpText>This is the number used to sort this record with sibling records.</inlineHelpText>
    <label>Display Order</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>