unpackaged/main/default/objects/adroll__AdRollCriteria__c/fields/adroll__Operation__c.field-meta.xml
<CustomField>
    <fullName>adroll__Operation__c</fullName>
    <description>Operation used for Comparison</description>
    <inlineHelpText>Operation used for Comparison</inlineHelpText>
    <label>Operation</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>=</fullName>
            </value>
            <value>
                <fullName>!=</fullName>
            </value>
            <value>
                <fullName>Like</fullName>
            </value>
            <value>
                <fullName>Not Like</fullName>
            </value>
            <value>
                <fullName>Includes</fullName>
            </value>
            <value>
                <fullName>Excludes</fullName>
            </value>
            <value>
                <fullName>&lt;</fullName>
            </value>
            <value>
                <fullName>&gt;</fullName>
            </value>
            <value>
                <fullName>&lt;=</fullName>
            </value>
            <value>
                <fullName>&gt;=</fullName>
            </value>
            <value>
                <fullName>=NULL</fullName>
            </value>
            <value>
                <fullName>!=NULL</fullName>
            </value>
            <value>
                <fullName>Equals</fullName>
                <isActive>false</isActive>
                <label>Equals</label>
            </value>
            <value>
                <fullName>Not Equals</fullName>
                <isActive>false</isActive>
                <label>Not Equals</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>