unpackaged/main/default/objects/adroll__AdRollCriteria__c/fields/adroll__SourceField__c.field-meta.xml
<CustomField>
    <fullName>adroll__SourceField__c</fullName>
    <description>Source Field used for the Criteria</description>
    <inlineHelpText>Source Field used for the Criteria</inlineHelpText>
    <label>Source Field</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
</CustomField>