unpackaged/main/default/objects/adroll__AdRollCriteria__c/fields/adroll__SourceObject__c.field-meta.xml
<CustomField>
    <fullName>adroll__SourceObject__c</fullName>
    <description>Source Object used for the Criteria</description>
    <inlineHelpText>Source Object used for the Criteria</inlineHelpText>
    <label>Source Object</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
</CustomField>