unpackaged/main/default/objects/adroll__AdRollCriteria__c/fields/adroll__Type__c.field-meta.xml
<CustomField>
    <fullName>adroll__Type__c</fullName>
    <description>Field Type</description>
    <inlineHelpText>Field Type</inlineHelpText>
    <label>Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Text</fullName>
            </value>
            <value>
                <fullName>Email</fullName>
            </value>
            <value>
                <fullName>Address</fullName>
            </value>
            <value>
                <fullName>Anytype</fullName>
            </value>
            <value>
                <fullName>Base64</fullName>
            </value>
            <value>
                <fullName>Boolean</fullName>
            </value>
            <value>
                <fullName>Combobox</fullName>
            </value>
            <value>
                <fullName>Currency</fullName>
            </value>
            <value>
                <fullName>Datacategorygroupreference</fullName>
            </value>
            <value>
                <fullName>Date</fullName>
            </value>
            <value>
                <fullName>Datetime</fullName>
            </value>
            <value>
                <fullName>Double</fullName>
            </value>
            <value>
                <fullName>Encryptedstring</fullName>
            </value>
            <value>
                <fullName>Id</fullName>
            </value>
            <value>
                <fullName>Integer</fullName>
            </value>
            <value>
                <fullName>Multipicklist</fullName>
            </value>
            <value>
                <fullName>Percent</fullName>
            </value>
            <value>
                <fullName>Phone</fullName>
            </value>
            <value>
                <fullName>Picklist</fullName>
            </value>
            <value>
                <fullName>Reference</fullName>
            </value>
            <value>
                <fullName>String</fullName>
            </value>
            <value>
                <fullName>Textarea</fullName>
            </value>
            <value>
                <fullName>Time</fullName>
            </value>
            <value>
                <fullName>Url</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>