unpackaged/main/default/objects/adroll__AdRollCriteria__c/fields/adroll__Value__c.field-meta.xml
<CustomField>
    <fullName>adroll__Value__c</fullName>
    <description>Value to compare</description>
    <inlineHelpText>Value to compare</inlineHelpText>
    <label>Value</label>
    <length>255</length>
    <type>Text</type>
</CustomField>